@@ -325,6 +325,7 @@ void game_display::draw_hex(const gamemap::location& loc)
 {
 	const bool on_map = map_.on_board(loc);
 	const bool is_shrouded = shrouded(loc);
+	const bool is_fogged = fogged(loc);
 	int xpos = get_location_x(loc);
 	int ypos = get_location_y(loc);
 	int drawing_order = gamemap::get_drawing_order(loc);
@@ -338,8 +339,9 @@ void game_display::draw_hex(const gamemap::location& loc)
 		typedef overlay_map::const_iterator Itor;
 		std::pair<Itor,Itor> overlays = overlays_.equal_range(loc);
 		for( ; overlays.first != overlays.second; ++overlays.first) {
-			if (overlays.first->second.team_name == "" ||
+			if ((overlays.first->second.team_name == "" ||
 			overlays.first->second.team_name.find(teams_[playing_team()].team_name()) != std::string::npos)
+			&& !(is_fogged && overlays.first->second.fogged))
 			{
 				drawing_buffer_add(LAYER_TERRAIN_BG, drawing_order, tblit(xpos, ypos,
 					image::get_image(overlays.first->second.image,image_type)));
@@ -966,12 +968,12 @@ void game_display::clear_attack_indicator()
 	set_attack_indicator(gamemap::location::null_location, gamemap::location::null_location);
 }
 
-void game_display::add_overlay(const gamemap::location& loc, const std::string& img, const std::string& halo,const std::string& team_name)
+void game_display::add_overlay(const gamemap::location& loc, const std::string& img, const std::string& halo,const std::string& team_name,const std::string& fogged)
 {
 	const int halo_handle = halo::add(get_location_x(loc) + hex_size() / 2,
 			get_location_y(loc) + hex_size() / 2, halo, loc);
 
-	const overlay item(img, halo, halo_handle, team_name);
+	const overlay item(img, halo, halo_handle, team_name, utils::string_bool(fogged,true));
 	overlays_.insert(overlay_map::value_type(loc,item));
 }
 
@@ -1015,6 +1017,7 @@ void game_display::write_overlays(config& cfg) const
 		item["image"] = i->second.image;
 		item["halo"] = i->second.halo;
 		item["team_name"] = i->second.team_name;
+		item["fogged"] = i->second.fogged ? "yes" : "no";
 	}
 }
 
